test/positive/feature_int_subtract_negative.java
public class feature_int_subtract_negative {
  public feature_int_subtract_negative() {}
  protected int x = 2147483647 - -2147483648;
  protected int y = 2147483647 - (-2147483648);
}
