test/negative/BigIntSubtraction.java
public class BigIntSubtraction {
  public BigIntSubtraction (){}
  protected int x = 0 - 2147483648;
}
